{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 152,
  "lineage": "0b068057-4e67-5e6e-71c7-9deda6d643dd",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:356449691181:internet-gateway/igw-04b2ffe9ecfb875e6",
            "id": "igw-04b2ffe9ecfb875e6",
            "owner_id": "356449691181",
            "tags": {
              "Name": "terraform_internet_gateway"
            },
            "tags_all": {
              "Name": "terraform_internet_gateway"
            },
            "vpc_id": "vpc-0593d36444d53a345"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:356449691181:route-table/rtb-03b7c44985eec0a0b",
            "id": "rtb-03b7c44985eec0a0b",
            "owner_id": "356449691181",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform_private_route_table"
            },
            "tags_all": {
              "Name": "terraform_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593d36444d53a345"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:356449691181:route-table/rtb-08b384824fb72f6ea",
            "id": "rtb-08b384824fb72f6ea",
            "owner_id": "356449691181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b2ffe9ecfb875e6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_public_route_table"
            },
            "tags_all": {
              "Name": "terraform_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593d36444d53a345"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08528c7cb7bae37e6",
            "route_table_id": "rtb-03b7c44985eec0a0b",
            "subnet_id": "subnet-023e6e0aa51c46982"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e999519a3f2fc185",
            "route_table_id": "rtb-03b7c44985eec0a0b",
            "subnet_id": "subnet-056b4fd6e95064fb5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c1c0662961750eb",
            "route_table_id": "rtb-03b7c44985eec0a0b",
            "subnet_id": "subnet-02ab6a0ed9cc92ba8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055783fc4c2f5c1b4",
            "route_table_id": "rtb-08b384824fb72f6ea",
            "subnet_id": "subnet-08b945c3f494ed194"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4f555931578b740",
            "route_table_id": "rtb-08b384824fb72f6ea",
            "subnet_id": "subnet-009233a4b920de878"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091cd174dd37ee636",
            "route_table_id": "rtb-08b384824fb72f6ea",
            "subnet_id": "subnet-0baf2ea16a478e1f3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:356449691181:subnet/subnet-023e6e0aa51c46982",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023e6e0aa51c46982",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356449691181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_private_subnet_1"
            },
            "tags_all": {
              "Name": "terraform_private_subnet_1"
            },
            "vpc_id": "vpc-0593d36444d53a345"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:356449691181:subnet/subnet-056b4fd6e95064fb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056b4fd6e95064fb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356449691181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_private_subnet_2"
            },
            "tags_all": {
              "Name": "terraform_private_subnet_2"
            },
            "vpc_id": "vpc-0593d36444d53a345"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:356449691181:subnet/subnet-02ab6a0ed9cc92ba8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ab6a0ed9cc92ba8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356449691181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_private_subnet_3"
            },
            "tags_all": {
              "Name": "terraform_private_subnet_3"
            },
            "vpc_id": "vpc-0593d36444d53a345"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:356449691181:subnet/subnet-08b945c3f494ed194",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b945c3f494ed194",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356449691181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_public_subnet_1"
            },
            "tags_all": {
              "Name": "terraform_public_subnet_1"
            },
            "vpc_id": "vpc-0593d36444d53a345"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:356449691181:subnet/subnet-009233a4b920de878",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009233a4b920de878",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356449691181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_public_subnet_2"
            },
            "tags_all": {
              "Name": "terraform_public_subnet_2"
            },
            "vpc_id": "vpc-0593d36444d53a345"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:356449691181:subnet/subnet-0baf2ea16a478e1f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baf2ea16a478e1f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356449691181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_public_subnet_3"
            },
            "tags_all": {
              "Name": "terraform_public_subnet_3"
            },
            "vpc_id": "vpc-0593d36444d53a345"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:356449691181:vpc/vpc-0593d36444d53a345",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0224067828e44681e",
            "default_route_table_id": "rtb-06125c9f3657f828d",
            "default_security_group_id": "sg-0c7d0dd7266f761be",
            "dhcp_options_id": "dopt-0049ab5945cfa4c43",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0593d36444d53a345",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06125c9f3657f828d",
            "owner_id": "356449691181",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}